@@ -4,6 +4,7 @@ lib/Acme/MetaSyntactic/bee_gees.pm
 lib/Acme/MetaSyntactic/charlies_angels.pm
 lib/Acme/MetaSyntactic/compass.pm
 lib/Acme/MetaSyntactic/evangelist.pm
+lib/Acme/MetaSyntactic/jelly_belly.pm
 lib/Acme/MetaSyntactic/michelin.pm
 lib/Acme/MetaSyntactic/nehi.pm
 lib/Acme/MetaSyntactic/sodor.pm
