@@ -1,5 +1,6 @@
-Version 2012053102
+Version 2012053102 Thu May 31 22:15:58 CEST 2012
 + Add author tests
++ New theme: jelly_belly
 
 Version 2012053101 Thu May 31 13:29:07 CEST 2012
 + Theme: nehi
